# nanomath-bot

./: .gitignore  bot.py  pyproject.toml
cogs/: bot.py  misc.py  potd.py  roles.py
